# sp500-research-agent

./: .env.example  README.md  anthropic_usage_reporter.py  pyproject.toml
.github/workflows/: daily-active.yml  daily.yml
data/snapshots/: 2026-04-17.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json
docs/: index.html  report.html
docs/assets/: app.js  style.css
docs/reports/: 2026-04-17.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  index.json
prompts/: analyzer_system.md  narrative_system.md
src/: __init__.py  analyzer.py  config.py  fetcher.py  logging_setup.py  main.py  models.py  narrative.py  news.py  notifier.py  ranker.py  storage.py
tests/: test_analyzer.py  test_notifier.py  test_ranker.py  test_storage.py
