[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-research-agent"
version = "0.1.0"
description = "Daily S&P 500 top-gainer research agent with Claude analysis, Telegram delivery, and GitHub Pages dashboard."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.39",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
sp500-research = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
